# ai-process-blueprint

./: .coveragerc  .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.test  MCP_VERIFICATION_GUIDE.md  PRD.md  README.md  development_guide.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  run_tests.sh  setup_env.sh  start_server.sh
.claude/: settings.local.json
.cursor/rules/: custom_instructions.md
app/: config.py  main.py  手順1  手順3  手順4  手順5  手順6  手順7
app/api/: routes.py
app/core/: services.py
app/data/: repository.py
app/mcp/: tools.py
app/schemas/: models.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEVELOPMENT_SETUP.md  手順1  手順2  手順7
scripts/: build.sh  run.sh  run_prod.sh
templates/: README.md  mcp_test_template.md  simple_test.md
test-results/: junit.xml
tests/: conftest.py  test_template_service.py
tests/test_api/: test_routes.py
tests/test_core/: test_services.py
tests/test_data/: test_repository.py
tests/test_integration/: test_app.py
tests/test_mcp/: test_tools.py
