[tool.poetry]
name = "ai-process-blueprint"
version = "0.1.0"
description = "AI Process Blueprint - A template management system for AI processes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
fastapi = ">=0.103.0"
fastmcp = ">=0.4.0"
pydantic = ">=2.0.0"
uvicorn = ">=0.23.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
fastapi_mcp = ">=0.2.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
httpx = ">=0.24.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 