[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-process-blueprint"
version = "0.1.0"
description = "AI Process Blueprint - A template management system for AI processes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.103.0",
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing" 

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
